--- a/MvcAuth/Web.config
+++ b/MvcAuth/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MvcAuth-20240203034658.mdf;Initial Catalog=aspnet-MvcAuth-20240203034658;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=DELL5540;Initial Catalog=MvcAuth;Integrated Security=False;User ID=sa;Password=123;MultipleActiveResultSets=True"
+         providerName="System.Data.SqlClient"  />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
